@@ -84,16 +84,15 @@ namespace libtorrent
 		{
 			ret = m_free_list.back();
 			m_free_list.pop_back();
+			m_peer_classes[ret] = peer_class(label);
 		}
 		else
 		{
 			TORRENT_ASSERT(m_peer_classes.size() < 0x100000000);
 			ret = m_peer_classes.size();
-			m_peer_classes.push_back(boost::shared_ptr<peer_class>());
+			m_peer_classes.push_back(peer_class(label));
 		}
 
-		TORRENT_ASSERT(m_peer_classes[ret].get() == 0);
-		m_peer_classes[ret] = boost::make_shared<peer_class>(label);
 		return ret;
 	}
 
@@ -103,11 +102,12 @@ namespace libtorrent
 		VALGRIND_CHECK_VALUE_IS_DEFINED(c);
 #endif
 		TORRENT_ASSERT(c < m_peer_classes.size());
-		TORRENT_ASSERT(m_peer_classes[c].get());
+		TORRENT_ASSERT(m_peer_classes[c].in_use);
+		TORRENT_ASSERT(m_peer_classes[c].references > 0);
 
-		--m_peer_classes[c]->references;
-		if (m_peer_classes[c]->references) return;
-		m_peer_classes[c].reset();
+		--m_peer_classes[c].references;
+		if (m_peer_classes[c].references) return;
+		m_peer_classes[c].clear();
 		m_free_list.push_back(c);
 	}
 
@@ -117,9 +117,9 @@ namespace libtorrent
 		VALGRIND_CHECK_VALUE_IS_DEFINED(c);
 #endif
 		TORRENT_ASSERT(c < m_peer_classes.size());
-		TORRENT_ASSERT(m_peer_classes[c].get());
+		TORRENT_ASSERT(m_peer_classes[c].in_use);
 
-		++m_peer_classes[c]->references;
+		++m_peer_classes[c].references;
 	}
 
 	peer_class* peer_class_pool::at(peer_class_t c)
@@ -127,14 +127,14 @@ namespace libtorrent
 #ifdef TORRENT_USE_VALGRIND
 		VALGRIND_CHECK_VALUE_IS_DEFINED(c);
 #endif
-		if (c >= m_peer_classes.size()) return 0;
-		return m_peer_classes[c].get();
+		if (c >= m_peer_classes.size() || !m_peer_classes[c].in_use) return NULL;
+		return &m_peer_classes[c];
 	}
 
 	peer_class const* peer_class_pool::at(peer_class_t c) const
 	{
-		if (c >= m_peer_classes.size()) return 0;
-		return m_peer_classes[c].get();
+		if (c >= m_peer_classes.size() || !m_peer_classes[c].in_use) return NULL;
+		return &m_peer_classes[c];
 	}
 
 }
